--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -10,12 +10,18 @@
     <header class="card-header text-center mb-20">
         <form action="/admin/users" method="get" class="d-inline">
             <div class="input-group input-group-sm border border-1 border-grey rounded-pill" style="width: 500px; margin-left: 230px;">
-                <input type="text" class="form-control border-0 rounded-pill" placeholder="Search customers..." name="search" value="<%= searchQuery %>">
-                <button class="btn border-0" type="submit">
+                <input type="text" class="form-control border-0 rounded-pill search-input" placeholder="Search customers..." name="search" value="<%= searchQuery %>">
+                
+                <!-- Search Button -->
+                <button class="btn search-btn" type="submit">
                     <i class="fa fa-search"></i> Search
                 </button>
+        
+                <!-- Clear Button as a real button -->
+                <a href="/admin/users" class="btn clear-btn">Clear</a>
             </div>
         </form>
+        
     </header>
 
     <div class="right mt-5">
