--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+  
+    <link rel="icon" type="image/jpeg" href="/images/favicon.jpg">
     <meta charset="utf-8">
-    <title>Gems Of Elegance - Admin Dashboard</title>
+    <link rel="icon" type="image/jpeg" href="images/favicon.jpg">
+    <title>Gems Of Elegance</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Men Fashion Admin Dashboard">
     <meta name="viewport" content="width=device-width, initial-scale=1">
