--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -2,7 +2,11 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<title>Pendent Store a Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | About :: w3layouts</title>
+	
+		<link rel="icon" type="image/jpeg" href="images/favicon.jpg">
+	
+	
+<title>Gems Of Elegance</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -100,18 +104,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 
 		<ul class="megamenu skyblue">
 			<li class="active grid"><a class="color1" href="/">Home</a></li>
-			<li class="grid"><a class="color1" href="#">jewellery</a>
-			</li>
-			<li><a class="color1" href="/products">catalog</a>
+			
+			<li><a class="color1" href="/products">Catalog</a>
+				
+		
+			<li><a class="color1" href="/contactus">Contact Us</a>
 				
 			</li>				
-			<li><a class="color1" href="#">Sale</a>
-				
-			</li>
-			<li><a class="color1" href="#">exclusive</a>
-				
-			</li>				
-			<li><a  class="color1" href="/about">about Us</a>
+			<li><a  class="color1" href="/about">About Us</a>
 				
 			</li>								
 		</ul> 
