--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -18,7 +18,7 @@
         <div class="reg">
             <h3>Register Now</h3>
             <p>Welcome, please enter the following details to continue.</p>
-            <p>If you have previously registered with us, <a href="#">click here</a></p>
+            <p>If you have previously registered with us, <a href="/login">click here</a></p>
             
             <form id="signupform" method="post" action="/signup">
                 <ul>
