--- a/public/css/editoffer.css
+++ b/public/css/editoffer.css
@@ -53,3 +53,10 @@
 .dropdown-container {
     margin-top: 10px;
 }
+.offer-edit-container button a {
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
