--- a/views/admin/editOffer.ejs
+++ b/views/admin/editOffer.ejs
@@ -43,7 +43,7 @@
         <input type="date" id="endDate" name="endDate" value="<%= offer.endDate.toISOString().split('T')[0] %>" required>
   
         <button type="submit">Update Offer</button>
-        <button><a href="/admin/getoffers" class="btn btn-danger"><i class="fas fa-times"></i> Exit</a></button>
+        <button><a href="/admin/getoffers">Exit</a></button>
     </form>
 </div>
 
