--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -45,19 +45,19 @@
                                 <% } %>
                             </td>
                             <td>
-                                <button class="btn btn-warning btn-sm edit-offer" >
+                                <!--<button class="btn btn-warning btn-sm edit-offer" >-->
                                  
                                
-                                <a href="/admin/editoffer/<%= offer._id %>" class="btn btn-warning btn-sm">
+                                <a href="/admin/editoffer/<%= offer._id %>" class="btn btn-warning btn-sm action-btn">
                                     <i class="fas fa-edit"></i> Edit
                                 </a>
-                            </button>
+                           
                                 <% if (offer.status === "active") { %>
-                                    <button class="btn btn-secondary btn-sm toggle-offer" data-id="<%= offer._id %>" data-status="inactive">
+                                    <button class="btn btn-secondary btn-sm toggle-offer action-btn" data-id="<%= offer._id %>" data-status="inactive">
                                         <i class="fas fa-toggle-off"></i> Disable
                                     </button>
                                 <% } else { %>
-                                    <button class="btn btn-success btn-sm toggle-offer" data-id="<%= offer._id %>" data-status="active">
+                                    <button class="btn btn-success btn-sm toggle-offer action-btn" data-id="<%= offer._id %>" data-status="active">
                                         <i class="fas fa-toggle-on"></i> Enable
                                     </button>
                                 <% } %>
