--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -5,6 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <%- include("../../views/partials/user/header") %>
+<link rel="stylesheet" href="/css/userlogin.css">
 <% if (typeof message !== "undefined" && message) { %>
     <div class="error" style="color: red; font-weight: bold; margin-bottom: 10px; text-align: center;">
         <%= message %>
@@ -25,8 +26,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						 <input type="text" value="" name="email" id="email" required>
 						 <h5>Password:</h5>
 						 <input type="password" value="" name="password" id="password" required>					
-						 <input type="submit" value="Login">
-						  
+						 <div class="login-button-group">
+							<input type="submit" value="Login" class="login-btn">
+							<a href="/auth/google" class="google-login-btn">
+								<img src="https://developers.google.com/identity/images/g-logo.png" alt="Google Logo">
+								Sign in with Google
+							</a>
+						</div>
 					 </form>
 					<a href="/forgot_password">Forgot Password ?</a>
 			</div>
